style.css
:root {
    --widthlayout: calc(100vw - 4rem); /* full viewport - (2* layout padding + gap between aside and main + gap between imageside and textside) - 2* body margin*/
    /*width layout is the width of the layout container with the grid content minus all the gaps (width of aside, imageside and textside)*/
    --widthmain: calc(calc(var(--widthlayout) - 2rem) /6 * 5);
    --widthtexts: calc(calc(var(--widthmain) /3 * -2 ) - 1rem);
    
}


* {
  box-sizing: border-box;
}

body {
  overflow-x: hidden;
  margin: 0;
  padding: 0;
}

h1 {
  font-family: "Archivo", sans-serif;
  font-weight: 600;
  font-size: 3rem;
  margin-bottom: 2rem;
}

p {
  font-family: "Archivo", sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  margin-bottom: 1rem;
}


h2 {
    font-family: "Archivo", sans-serif;
    font-weight: 600;
    font-size: 1.5rem;
    margin-bottom: 4rem;
    
}

.archivo-font> {
  font-family: "Archivo", sans-serif;
  font-optical-sizing: auto;
  font-weight: 100;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

/* Header with Logo*/
header {
    display: flex;
    justify-content: center;
    padding: 1rem;
}

/* Navigation Bar */

nav {
    background-color: white;
    height: 40px;
    position: sticky;
    top: 0;
    z-index: 100;
}

nav li {
    list-style-type: none;
    font-family: "Archivo", sans-serif;
    font-weight: 500;
}

nav ul {
    display: flex;
    flex-direction: row;
    height: 40px;
    border-bottom: 1px solid black;
    background-color: white;
    align-items: center;
    justify-content: space-around;
    padding: 0;
}




.layout {
    display: grid;
    grid-template-columns: 1fr 5fr;
    gap: 2rem;
    margin: 0;
    padding: 2rem;
    width: 100vw;
    grid-template-areas:
        "sidebar overview"
        "sidebar maincontent"; 
    align-self: start;
}

.sidebar li:first-child {
    margin-top: 50px;
}

.sidebar {
    
    grid-area: sidebar;
    position: sticky;
    top: 0;
    align-self: start;
}

.sidebar li {
    margin-bottom: 0.6rem;
    font-family: "Archivo", sans-serif;
    font-weight: 600;
    font-size: 1.2rem;
    list-style-type: none;
}

.sidebar li a {
    text-decoration: none;
    color: black;
}

.sidebar li a:hover {
    font-weight: 800;
}


.sidebar ul {
    padding: 0;
}

.overview {
    grid-area: overview;
}

.overview img {
    width: 100%;
    height: auto;
    display: block;
    margin-top: 1rem;
}

.maincontent {
    grid-area: maincontent;
}

.adresse {
    font-family: "Archivo", sans-serif;
    font-weight: 500;
    font-size: 1.2rem;
    margin-bottom: 1rem;
}

.content-section {
    display: grid;
    align-items: start;
    grid-template-rows: 3.5rem 1fr;
    grid-template-columns: 2fr 1fr;
    grid-template-areas:
        ". texts"
        "images texts";
    gap: 0rem;
    width: 100%;
    
}


.subheading {
    
    margin-top: 0;
    padding-top: 0;
    transition: transform 1.5s ease-in-out;

    
    /*
    left: 0%;
    transition: transform 1.5s ease-in-out;
    */
}

.subheading.is-inactive {
    /*transform: translateX(calc((calc((100vw - 6rem - 16px) /6 * 5)) / 3 * -2));*/
    transform: translateX(var(--widthtexts));
    transition: transform 1.5s ease-in-out;
    margin-left: 0;
}


/*
.subheading.is-active {
    transform: translateX(68%);
}

*/

.imageside {
    grid-area: images;
    display: grid;
    gap: 1rem;
    padding-right: 1rem;

}

.textside {
    grid-area: texts;
    position: sticky;
    top: 4rem;
    align-self: start;
    padding-left: 1rem;
    max-width: 45ch;

}


.imagefull {
    margin: 2rem 0 5rem;
    
}

.imageside img,
.imagefull img {
    width: 100%;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
}


footer a {
    text-decoration: none;
    color: black;
    font-family: "Archivo", sans-serif;
    font-size: 1rem;

}

footer h3 {
    font-family: "Archivo", sans-serif;
    font-size: 1.25rem;
}

.contactdetails a:hover {
    text-decoration: none;
    font-weight: 800;

}




/* mobile phone */
@media screen and (max-width: 800px) {

    h2 {
        margin-bottom: 3rem;
    }


    header {
        padding: 0.5rem;
    }

    header img{
        width: 150px;
    }

    nav ul{
        margin-block-start: 0.5rem;
    }

    .layout {
        display: grid;
        padding: 1rem;
        grid-template-columns: 1fr;
        grid-template-areas:
            "overview"
            "maincontent";
    }
    .content-section {
        grid-template-columns: 1fr;
        grid-template-areas:
            "title"
            "texts"
            "images";
        gap: 1rem;
        
    }

    .subheading {
        grid-area: title;
        position: relative;
        left: 0%;

    }
    
    
    .subheading.is-inactive {
    transform: translateX(0);
    
    }



    .textside {
        position: static;
        justify-self: start;
        max-width: 100%;
        padding-left: 0;
    }

    .imageside {
        padding-right: 0;
    }
    
    .sidebar {
        display: none;
    }

    .imagefull {
    margin: 1rem 0 2rem;
    
}

    /*
    .sidebar {
        grid-area: sidebar;
        position: sticky;
        top: 0;
        align-self: start;
    }
    
    .sidebar li {
        margin-bottom: 1rem;
        font-family: "Archivo", sans-serif;
        font-weight: 600;
        font-size: 0.875rem;
        list-style-type: none;
    }
    */
}

